# endstone-ws-server

./: pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/endstone_wsplugin/: __init__.py  listener.py  plugin.py  ws.py
