[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-wsplugin"
version = "0.1.0"
dependencies = []
authors = [
    { name = "FiveSeg", email = "me@5seg.top" },
]
description = "WebSocket Server"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/5seg/endstone-ws-server"

[project.entry-points."endstone"]
wsplugin = "endstone_wsplugin:WSPlugin"