[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-wsplugin"
version = "0.1.5"
dependencies = [
    "asyncio==4.0.0",
    "websockets==16.0"
]
authors = [
    { name = "FiveSeg", email = "me@5seg.top" },
]
description = "WebSocket Server"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/5seg/endstone-ws-server"

[project.entry-points."endstone"]
wsplugin = "endstone_wsplugin:WSPlugin"
